# RealTimeAnomalyDetection

./: .gitignore  pyproject.toml  training.py  tuning.py
data/: enrich.py
models/: AE.pkl  IF.pkl  ModelServe.py  SOM.pkl
notebooks/: ensemble.ipynb  exploration.ipynb  modelling.ipynb  modelresults.ipynb  models.ipynb  resultexploration.ipynb  results.ipynb  training.ipynb  validation.ipynb
src/: main.py
src/features/: CatEntropy.py  CatFeatures.py  CatFreq.py  TimeFeatures.py
src/models/: AutoEncoder.py  BaseClass.py  IsolationForest.py  MLFlowWrapper.py  SelfOrganizingMap.py  __init__.py
src/preprocessing/: AutoEncoderFeatureExtractor.py  PreProcessing.py  TrainTestSplit.py
src/training/: __init__.py  seachspaces.py  train.py  tune.py
streaming/SparkScala/: build.sbt
streaming/SparkScala/src/main/scala/fraud/: Domain.scala  Features.scala  FraudPipeline.scala  Scoring.scala  StatefulScoringFunction.scala
streaming/kafka/: CBSProducer.py  CSVProducer.py  DebugConsumer.py
streaming/spark/: Dims.py  Modelling.py  Scoring.py  TableCreate.py  pipeline.py
streaming/streamjobs/: Features.py  Scoring.py  TableCreate.py  pipeline.py
